--- a/style.css
+++ b/style.css
@@ -150,3 +150,22 @@ nav {
 .header-box {
   margin-top: -20vw;
 }
+.products-slider {
+  background: #fff;
+  margin: 0 30px;
+  padding: 20px;
+  margin-bottom: 15px;
+}
+.products-slider .products {
+  display: flex;
+  overflow-x: auto;
+  gap: 20px;
+  margin-top: 10px;
+}
+.products-slider .products img {
+  max-width: 200px;
+  max-height: 200;
+}
+.products-slider .products::-webkit-scrollbar {
+  display: none;
+}
